test-data/unit/check-incremental.test
-- Checks for incremental mode (see testcheck.py).
-- Each test is run twice, once with a cold cache, once with a warm cache.
-- The first time it must pass.
-- Before it is run the second time, any *.py.next files are copied to *.py.
-- The second time it must produce the errors given in the [out] section, if any.
--
-- Any files that we expect to be stale and rechecked should be annotated in
-- the [expectStale] section. The test suite will automatically assume that
-- __main__ is stale so we can avoid constantly having to annotate it.
-- The list of stale files can be in any arbitrary order. You can have multiple
-- [expectStale] annotations per case: the test suite will union them together.

[case testIncrementalEmpty]
[out]

[case testIncrementalBasics]
import m
[file m.py]
def foo():
    pass
[file m.py.next]
def foo() -> None:
    pass
[expectStale m]
[out]

[case testIncrementalError]
import m
[file m.py]
def foo() -> None:
    pass
[file m.py.next]
def foo() -> None:
    bar()
[expectStale m]
[out]
main:1: note: In module imported here:
tmp/m.py: note: In function "foo":
tmp/m.py:2: error: Name 'bar' is not defined

[case testIncrementalSimpleImportSequence]
import mod1
mod1.func1()

[file mod1.py]
import mod2
def func1() -> None: mod2.func2()

[file mod2.py]
import mod3
def func2() -> None: mod3.func3()

[file mod3.py]
def func3() -> None: pass

[file mod1.py.next]
import mod2
def func1() -> None: mod2.func2()

[file mod2.py.next]
import mod3
def func2() -> None: mod3.func3()

[file mod3.py.next]
def func3() -> None: pass

[out]


[case testIncrementalSimpleImportCascade]
import mod1
mod1.func1()

[file mod1.py]
import mod2
def func1() -> None: mod2.func2()

[file mod2.py]
import mod3
def func2() -> None: mod3.func3()

[file mod3.py]
def func3() -> None: pass

[file mod1.py.next]
import mod2
def func1() -> None: mod2.func2()

[file mod2.py.next]
import mod3
def func2() -> None: mod3.func3()

[file mod3.py.next]
def func3() -> int: return 2

[expectStale mod1, mod2, mod3]
[out]

[case testIncrementalSimpleBranchingModules]
import mod1
import mod2

[file mod1.py]
def func() -> None: pass

[file mod2.py]
def func() -> None: pass

[file mod1.py.next]
def func() -> int: return 1

[file mod2.py.next]
def func() -> None: pass

[expectStale mod1]
[out]

